--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "laravel/telescope": "^5.8",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "phpunit/phpunit": "^11.5.3",
+        "soloterm/solo": "^0.5.0"
     },
     "autoload": {
         "psr-4": {
